--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'admin/admin.scss';
 @import 'dashboard/dashboard.scss';
 @import 'main/main.scss';
+@import 'poll/poll.scss';
 // endinjector
 
 .tabsdemoDynamicHeight md-content {
